# data-warehouse-data-lake-project

./: .gitignore  02_wikipedia_airports_eu.ipynb  03_GET_airports.ipynb  README.md  airport_per_city.json  airports_eu.ipynb  api_exp.ipynb  busiest_airports_in_europe.csv  city_data.json  get_airports.ipynb  open_weather_pollution.ipynb  open_weather_pollution.py  open_weather_weather.ipynb  open_weather_weather.py  pyproject.toml  requirements.txt  update_aws_credentials.sh  wikipedia_airports_eu.csv
bucket-policy-setup/: apply-policy.sh  backup-copy-bucketfiles.sh  bucket-policy.json  copy-bucketfiles.sh
data/aviation_edge/: airport_per_city.json
data/here/: geocode_data.json
lambda_functions/: Dockerfile.template  README.md  create_or_update_lambda_function.sh  delete_lambda_function_schedule.sh  lambda_config_template.json  setup_lambda_function_schedule.sh
lambda_functions/air_pollution_upload/: Dockerfile  config.json  config.yaml  lambda_config.json  open_weather_coordinates.py  open_weather_pollution.py
lambda_functions/aviationedge/: Dockerfile  create_and_push_lambdas.sh  create_or_update_lambda_function.sh  invoke_all_parents.sh  lambda_function.py  requirements.txt  setup_eventbridge.sh  setup_eventbridge_rds.sh  testcalls.py
lambda_functions/rds_database/: Dockerfile  config.yaml  lambda_config.json  output.json  requirements.txt  update_mv_database.py
lambda_functions/tomtom/: config.yaml
lambda_functions/weather_data_upload/: Dockerfile  config.json  config.yaml  create_tables.sql  lambda_config.json  open_weather_coordinates.py  open_weather_weather.py  rds_creation.sh  requirements.txt
notebooks/airpollution_api/: open_weather_pollution.ipynb
notebooks/aviation_edge/: 03_GET_airports.ipynb
s3_buckets/: README.md  create_bucket.sh  delete_bucket.sh
src/api/: tomtom.py
(+198 files in other folders)
